--- a/OurUmbraco.Client/src/scss/elements/_search-big.scss
+++ b/OurUmbraco.Client/src/scss/elements/_search-big.scss
@@ -7,9 +7,9 @@
 	input {
 		-webkit-appearance: none;
 		border-radius: 0;
-		
+
 		border: 1px solid darken(whitesmoke, 15%);
-		padding: 20px 6px 20px 6px;
+		padding: 20px 10px 20px 10px;
 		outline: none;
 		display: block;
 		width: 100%;
