--- a/OurUmbraco.Client/src/scss/elements/_search-results.scss
+++ b/OurUmbraco.Client/src/scss/elements/_search-results.scss
@@ -529,6 +529,8 @@
 		font-size: .7rem;
 		letter-spacing: .5px;
 
+		text-align: center;
+
 		transform: translate(-50%, -50%);
 
 		cursor: pointer;
