--- a/OurUmbraco.Client/src/scss/pages/_release.scss
+++ b/OurUmbraco.Client/src/scss/pages/_release.scss
@@ -343,9 +343,16 @@
 	flex: 1 1 100%;
 	padding: 0;
 
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+
 	@media (min-width: 768px) {
 		flex: 1 1 47%;
 	    padding: 0 3% 0 0;
+		align-items: flex-start;
+		text-align: left;
 	}
 }
 
